Fix duplicate scrollbars

--- a/app/components/ServiceView.css
+++ b/app/components/ServiceView.css
@@ -4,7 +4,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    overflow: scroll;
+    overflow: hidden;
 }
 .hide {
 	z-index: -9999;
